dex/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app: quality-authenticator
    component: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quality-authenticator
      component: dex
  template:
    metadata:
      labels:
        app: quality-authenticator
        component: dex
    spec:
      containers:
      - image: ghcr.io/dexidp/dex:v2.39.0
        securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        ports:
        - name: http
          containerPort: 5556
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
      volumes:
      - name: config
        secret:
          secretName: quality-dashboard-secrets
          items:
          - key: dex-config.yaml
            path: config.yaml
