dex/deploy/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app: quality-authenticator
    component: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quality-authenticator
      component: dex
  template:
    metadata:
      labels:
        app: quality-authenticator
        component: dex
    spec:
      containers:
      - image: ghcr.io/dexidp/dex:v2.36.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        resources:
          requests:
            cpu: "10"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        ports:
        - name: http
          containerPort: 5555
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
      volumes:
      - name: config
        secret:
          secretName: dex-config
          items:
          - key: config.yaml
            path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    app: quality-authenticator
    component: dex
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
  selector:
    app: quality-authenticator
    component: dex
