dex/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    app: quality-authenticator
    component: dex
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
  selector:
    app: quality-authenticator
    component: dex
