dex/deploy/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dex
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  to:
    kind: Service
    name: dex
  port:
    targetPort: 5556
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
